--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <div>
   test html
+  <img src="https://i.loli.net/2021/04/07/QgHvB7hlJyCnN8s.jpg" />
 </div>
+<script type="javascript">
+ alert("test")
+</script>
