--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ function myFunction() {
 
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
-
+<video oncontextmenu="return false;" controlslist="nodownload" controls="" poster="https://media.publit.io/file/1-eT.jpg"   playsinline ><source src="https://media.publit.io/file/h_480/1-eT.webm" type="video/webm"><source src="https://media.publit.io/file/h_480/1-eT.mp4" type="video/mp4"><source src="https://media.publit.io/file/h_480/1-eT.ogv" type="video/ogv"></video>
 </body>
 </html>
