--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ function myFunction() {
 
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
-<video oncontextmenu="return false;" controlslist="nodownload" controls="" poster="https://media.publit.io/file/1-eT.jpg"   playsinline ><source src="https://media.publit.io/file/h_480/1-eT.webm" type="video/webm"><source src="https://media.publit.io/download/1-eT.mp4?at=eyJpdiI6Ik84UUtXckVYUG9aTGt1UVRQS0FCalE9PSIsInZhbHVlIjoiSS9UZ21SQ0xYZ2ZIZ3JnSTZ1SktCQXlaUXI0L2F4MEt1R1cySVp4dzl6ST0iLCJtYWMiOiJjZGFlNzUwNDM3YTk4NTAwNWM5MWE0ZWI3OWE3NzVhMWM0YmRiNWYwYzc5MzRiYTIwNjU4NzExZTA0MTQwYjNmIiwidGFnIjoiIn0=" type="video/mp4"><source src="https://media.publit.io/file/h_480/1-eT.ogv" type="video/ogv"></video>
+<video oncontextmenu="return false;" controlslist="nodownload" controls="" poster="https://media.publit.io/file/1-eT.jpg"   playsinline ><source src="https://media.publit.io/download/1-eT.mp4?at=eyJpdiI6Ik84UUtXckVYUG9aTGt1UVRQS0FCalE9PSIsInZhbHVlIjoiSS9UZ21SQ0xYZ2ZIZ3JnSTZ1SktCQXlaUXI0L2F4MEt1R1cySVp4dzl6ST0iLCJtYWMiOiJjZGFlNzUwNDM3YTk4NTAwNWM5MWE0ZWI3OWE3NzVhMWM0YmRiNWYwYzc5MzRiYTIwNjU4NzExZTA0MTQwYjNmIiwidGFnIjoiIn0=" type="video/mp4"></video>
 </body>
 </html>
