--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ function myFunction() {
 
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
-<video oncontextmenu="return false;" controlslist="nodownload" controls="" poster="https://media.publit.io/file/1-eT.jpg"   playsinline ><source src="https://res.cloudinary.com/dy05jixli/video/upload/v1692535337/1_sqthoc.mp4" type="video/mp4"></video>
+<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x8nasht?autoplay=1" width="100%" height="100%" allowfullscreen title="Dailymotion Video Player" allow="autoplay"> </iframe> </div>
 </body>
 </html>
