--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@ function myFunction() {
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
 <iframe src="//player.bilibili.com/player.html?aid=359754565&bvid=BV1TX4y1x7FC&cid=1236156982&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="720" height="405" frameborder="0" src="https://www.ixigua.com/iframe/7256364980646347276?autoplay=0" referrerpolicy="unsafe-url" allowfullscreen></iframe>
 </body>
 </html>
