--- a/index.html
+++ b/index.html
@@ -14,6 +14,5 @@ function myFunction() {
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
 <iframe src="//player.bilibili.com/player.html?aid=359754565&bvid=BV1TX4y1x7FC&cid=1236156982&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-<iframe width="720" height="405" frameborder="0" src="https://www.ixigua.com/iframe/7256364980646347276?autoplay=0" referrerpolicy="unsafe-url" allowfullscreen></iframe>
-</body>
+<div style="padding: 177.78% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/HNNNeiBsdHDGQZYL" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div></body>
 </html>
