--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ function myFunction() {
 
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
-<iframe src="//player.bilibili.com/player.html?aid=359754565&bvid=BV1TX4y1x7FC&cid=1236156982&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-<div style="padding: 177.78% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/HNNNeiBsdHDGQZYL" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div></body>
+<video>
+  <source src="https://v3-dy-o.zjcdn.com/0708e7d8087924927e01d557291fe283/64e24a1c/video/tos/cn/tos-cn-ve-15c001-alinc2/o0AhNvIgNpAefD4jn19wD0bxh2nRABGEqR9kTT/?a=1128&ch=0&cr=0&dr=0&cd=0%7C0%7C0%7C0&cv=1&br=2641&bt=2641&cs=0&ds=3&ft=F-_ezGTe0BN11UvjVQIjmLK7usXXsatmaglc&mime_type=video_mp4&qs=0&rc=Mzs1ZzloNjpkOTw7NTMzNUBpanI2eDQ6ZmVybTMzNGkzM0AtNC41LjUyX18xNGBgNF5fYSNjXjNocjRvbzZgLS1kLWFzcw%3D%3D&btag=e000a8000&cc=1f&dy_q=1692547890&l=2023082100113051249BF28DF79C1DB74E" type>
+</video>
 </html>
