--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="referrer" content="no-referrer">
 <script>
 function myFunction() {
   alert("test");
