--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="referrer" content="no-referrer">
+</head>
 <script>
 function myFunction() {
   alert("test");
@@ -21,11 +22,14 @@ function myFunction() {
   }
  
 </script>
-</head>
+
 <body>
     <div id="vs"></div>
 <h2>Demo JavaScript in Head</h2>
 
 <p id="demo">A Paragraph</p>
+  <video src="https://v5-coldn.douyinvod.com/76642d30d0b728ba152195b4dbbc365a/64e25f52/video/tos/cn/tos-cn-ve-15c001-alinc2/b1cd21d8bd16456a867f0688dd5902b1/?a=1128&ch=0&cr=0&dr=0&cd=0%7C0%7C0%7C0&cv=1&br=2368&bt=2368&cs=0&ds=3&ft=GNvhKpVVywhiRF_oZmo~ySqTeaAp0IKW6vrKbu7rNdo0g3&mime_type=video_mp4&qs=0&rc=aTNmNTk1Zzw3M2k0NDRoN0Bpajg6O2c6Zm14bTMzNGkzM0A0MzQxXmFhXjIxYDJeLTQtYSNhNGdocjRnX2RgLS1kLWFzcw%3D%3D&btag=e00088000&dy_q=1692553530&l=2023082101452993FDEA1226E6FEAD9CC2" controls="controls">
+您的浏览器不支持 video 标签。
+</video>
 <button type="button" onclick="myFunction()">Try it</button>
 </html>
