--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ function myFunction() {
   document.getElementById("demo").innerHTML = "Paragraph changed.";
 }
 </script>
-
+<!-- 
 <script src="https://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript"></script>
 <script type="text/javascript">
   window.onload = function() {
@@ -21,7 +21,7 @@ function myFunction() {
   });
   }
  
-</script>
+</script> -->
 
 <body>
     <div id="vs"></div>
