--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@ function myFunction() {
   document.getElementById("demo").innerHTML = "Paragraph changed.";
 }
 </script>
-<!-- 
+
 <script src="https://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript"></script>
 <script type="text/javascript">
   window.onload = function() {
      let player = new window.Player({
     id: 'vs',
-    url: 'https://v5-coldn.douyinvod.com/76642d30d0b728ba152195b4dbbc365a/64e25f52/video/tos/cn/tos-cn-ve-15c001-alinc2/b1cd21d8bd16456a867f0688dd5902b1/?a=1128&ch=0&cr=0&dr=0&cd=0%7C0%7C0%7C0&cv=1&br=2368&bt=2368&cs=0&ds=3&ft=GNvhKpVVywhiRF_oZmo~ySqTeaAp0IKW6vrKbu7rNdo0g3&mime_type=video_mp4&qs=0&rc=aTNmNTk1Zzw3M2k0NDRoN0Bpajg6O2c6Zm14bTMzNGkzM0A0MzQxXmFhXjIxYDJeLTQtYSNhNGdocjRnX2RgLS1kLWFzcw%3D%3D&btag=e00088000&dy_q=1692553530&l=2023082101452993FDEA1226E6FEAD9CC2',
+    url: 'http://v26-web.douyinvod.com/1ad742bbbc2aeec77d2115eb2c8f95d0/64e272ac/video/tos/cn/tos-cn-ve-15c001-alinc2/ok0xAhbnNIDt9qkATjGfb0w4TB9AQD2TeREvEg/?a=6383&amp;ch=26&amp;cr=3&amp;dr=0&amp;lr=all&amp;cd=0%7C0%7C0%7C3&amp;cv=1&amp;br=2558&amp;bt=2558&amp;cs=0&amp;ds=6&amp;ft=dJYkaoEP0BN11UvjVQQ6WLK7usXXsatmaglc&amp;mime_type=video_mp4&amp;qs=0&amp;rc=Zzw2ODM4ODpnZzs7Ozs5aUBpanI2eDQ6ZmVybTMzNGkzM0AtXy0vL19gNTMxYDIxYjY0YSNjXjNocjRvbzZgLS1kLWFzcw%3D%3D&amp;btag=e00028000&amp;dy_q=1692558274&amp;l=20230821030434FF27AD989C67822C5BFC',
     pip: true, //打开画中画功能,
     fitVideoSize: 'auto'
   });
   }
  
-</script> -->
+</script>
 
 <body>
     <div id="vs"></div>
 <h2>Demo JavaScript in Head</h2>
 
 <p id="demo">A Paragraph</p>
-  <video src="http://v26-web.douyinvod.com/1ad742bbbc2aeec77d2115eb2c8f95d0/64e272ac/video/tos/cn/tos-cn-ve-15c001-alinc2/ok0xAhbnNIDt9qkATjGfb0w4TB9AQD2TeREvEg/?a=6383&amp;ch=26&amp;cr=3&amp;dr=0&amp;lr=all&amp;cd=0%7C0%7C0%7C3&amp;cv=1&amp;br=2558&amp;bt=2558&amp;cs=0&amp;ds=6&amp;ft=dJYkaoEP0BN11UvjVQQ6WLK7usXXsatmaglc&amp;mime_type=video_mp4&amp;qs=0&amp;rc=Zzw2ODM4ODpnZzs7Ozs5aUBpanI2eDQ6ZmVybTMzNGkzM0AtXy0vL19gNTMxYDIxYjY0YSNjXjNocjRvbzZgLS1kLWFzcw%3D%3D&amp;btag=e00028000&amp;dy_q=1692558274&amp;l=20230821030434FF27AD989C67822C5BFC" controls="controls">
+<!--   <video src="http://v26-web.douyinvod.com/1ad742bbbc2aeec77d2115eb2c8f95d0/64e272ac/video/tos/cn/tos-cn-ve-15c001-alinc2/ok0xAhbnNIDt9qkATjGfb0w4TB9AQD2TeREvEg/?a=6383&amp;ch=26&amp;cr=3&amp;dr=0&amp;lr=all&amp;cd=0%7C0%7C0%7C3&amp;cv=1&amp;br=2558&amp;bt=2558&amp;cs=0&amp;ds=6&amp;ft=dJYkaoEP0BN11UvjVQQ6WLK7usXXsatmaglc&amp;mime_type=video_mp4&amp;qs=0&amp;rc=Zzw2ODM4ODpnZzs7Ozs5aUBpanI2eDQ6ZmVybTMzNGkzM0AtXy0vL19gNTMxYDIxYjY0YSNjXjNocjRvbzZgLS1kLWFzcw%3D%3D&amp;btag=e00028000&amp;dy_q=1692558274&amp;l=20230821030434FF27AD989C67822C5BFC" controls="controls">
 您的浏览器不支持 video 标签。
-</video>
+</video> -->
 <button type="button" onclick="myFunction()">Try it</button>
 </html>
